--- a/heapmonj/backend/heapmonj/build.gradle
+++ b/heapmonj/backend/heapmonj/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
 	testImplementation 'org.junit.jupiter:junit-jupiter'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation "dev.dmotservices:libdmotservices-core:0.3.0"
