--- a/heapmonj/.gitignore
+++ b/heapmonj/.gitignore
@@ -52,3 +52,5 @@ pnpm-debug.log*
 /backend/heapmonj/data/
 /backend/heapmonj/*.mv.db
 /backend/heapmonj/*.trace.db
+**/node_modules
+**/package-lock.json
