--- a/heapmonj/backend/heapmonj/src/main/resources/application.properties
+++ b/heapmonj/backend/heapmonj/src/main/resources/application.properties
@@ -5,5 +5,10 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+spring.h2.console.enabled=false
 spring.h2.console.path=/h2-console
+
+#
+# heapmonj-specific
+#
+heapmonj.sampling.interval-ms=10000
