--- a/libdmotservices/js/package.json
+++ b/libdmotservices/js/package.json
@@ -5,7 +5,7 @@
   "type": "commonjs",
   "scripts": {
     "lint": "eslint src tests --ext .js",
-    "test": "node --test tests"
+    "test": "node --test tests/*.js"
   },
   "devDependencies": {
     "eslint": "^8.57.1"
