CI updated to verify Docker Compose health on each push to main

--- a/.github/workflows/cv-samples-ci.yml
+++ b/.github/workflows/cv-samples-ci.yml
@@ -40,3 +40,6 @@ jobs:
             dist/**
           if-no-files-found: warn
           retention-days: 90
+      
+      - name: Verify Docker Compose starts cleanly
+        run: ./dev.sh --test-compose
