--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,26 +8,40 @@ services:
       context: .
       dockerfile: slideshow-server/Dockerfile
     ports:
-      - "8081:8080"
+      - "8083:8080"
     volumes:
       - ./slideshow-server/publicdomainpictures.net:/media:ro
     restart: unless-stopped
-  wifiequ:
+  wifiequ-backend:
     build:
       context: .
       dockerfile: wifiequ/Dockerfile
     environment:
       WFQ_MOCK: "1"
       WFQ_IFACE: "wlan0"
+      WFQ_ACCESS_TOKEN: "wfq-demo-token-please-change"
     ports:
-      - "8082:8080"
+      - "8084:8080"
+    restart: unless-stopped
+  wifiequ-frontend:
+    build:
+      context: ./wifiequ/web-angular
+      dockerfile: Dockerfile
+    environment:
+      WFQ_BACKEND_URL: "http://wifiequ-backend:8080"
+      WFQ_FRONTEND_PORT: "80"
+      WFQ_STATS_KEY: "wfq-demo-token-please-change"
+    ports:
+      - "8085:80"
+    depends_on:
+      - wifiequ-backend
     restart: unless-stopped
   heapmonj-backend:
     build:
       context: .
       dockerfile: heapmonj/backend/Dockerfile
     ports:
-      - "8083:8080"
+      - "8081:8080"
     volumes:
       - ./heapmonj/backend/heapmonj/data:/opt/heapmonj/data
     restart: unless-stopped
@@ -36,7 +50,7 @@ services:
       context: .
       dockerfile: heapmonj/frontend/Dockerfile
     ports:
-      - "8084:80"
+      - "8082:80"
     depends_on:
       - heapmonj-backend
     restart: unless-stopped
@@ -48,7 +62,7 @@ services:
       - "8080:80"
     depends_on:
       - slideshow-server
-      - wifiequ
+      - wifiequ-backend
       - heapmonj-backend
       - heapmonj-frontend
     restart: unless-stopped
