--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,39 +3,6 @@
 ######################################
 
 services:
-  slideshow-server:
-    build:
-      context: .
-      dockerfile: slideshow-server/Dockerfile
-    ports:
-      - "8083:8080"
-    volumes:
-      - ./slideshow-server/publicdomainpictures.net:/media:ro
-    restart: unless-stopped
-  wifiequ-backend:
-    build:
-      context: .
-      dockerfile: wifiequ/Dockerfile
-    environment:
-      WFQ_MOCK: "1"
-      WFQ_IFACE: "wlan0"
-      WFQ_ACCESS_TOKEN: "wfq-demo-token-please-change"
-    ports:
-      - "8084:8080"
-    restart: unless-stopped
-  wifiequ-frontend:
-    build:
-      context: ./wifiequ/web-angular
-      dockerfile: Dockerfile
-    environment:
-      WFQ_BACKEND_URL: "http://wifiequ-backend:8080"
-      WFQ_FRONTEND_PORT: "80"
-      WFQ_STATS_KEY: "wfq-demo-token-please-change"
-    ports:
-      - "8085:80"
-    depends_on:
-      - wifiequ-backend
-    restart: unless-stopped
   heapmonj-backend:
     build:
       context: .
@@ -54,6 +21,29 @@ services:
     depends_on:
       - heapmonj-backend
     restart: unless-stopped
+  null-cipher:
+    build:
+      context: ./null-cipher
+      dockerfile: Dockerfile
+    ports:
+      - "8083:80"
+    restart: unless-stopped
+  pkixwebadm:
+    build:
+      context: .
+      dockerfile: pkixwebadm/Dockerfile
+    ports:
+      - "8084:8080"
+    restart: unless-stopped
+  slideshow-server:
+    build:
+      context: .
+      dockerfile: slideshow-server/Dockerfile
+    ports:
+      - "8085:8080"
+    volumes:
+      - ./slideshow-server/publicdomainpictures.net:/media:ro
+    restart: unless-stopped
   stack-index:
     image: nginx:1.27-alpine
     volumes:
@@ -61,8 +51,43 @@ services:
     ports:
       - "8080:80"
     depends_on:
-      - slideshow-server
-      - wifiequ-backend
       - heapmonj-backend
       - heapmonj-frontend
+      - null-cipher
+      - pkixwebadm
+      - slideshow-server
+      - triangle-peg-game-react
+      - wifiequ-backend
+      - wifiequ-frontend
+    restart: unless-stopped
+  triangle-peg-game-react:
+    build:
+      context: ./triangle-peg-game-react
+      dockerfile: Dockerfile
+    ports:
+      - "8086:80"
+    restart: unless-stopped
+  wifiequ-backend:
+    build:
+      context: .
+      dockerfile: wifiequ/Dockerfile
+    environment:
+      WFQ_MOCK: "1"
+      WFQ_IFACE: "wlan0"
+      WFQ_ACCESS_TOKEN: "wfq-demo-token-please-change"
+    ports:
+      - "8087:8080"
+    restart: unless-stopped
+  wifiequ-frontend:
+    build:
+      context: ./wifiequ/web-angular
+      dockerfile: Dockerfile
+    environment:
+      WFQ_BACKEND_URL: "http://wifiequ-backend:8080"
+      WFQ_FRONTEND_PORT: "80"
+      WFQ_STATS_KEY: "wfq-demo-token-please-change"
+    ports:
+      - "8088:80"
+    depends_on:
+      - wifiequ-backend
     restart: unless-stopped
