--- a/triangle-peg-game-react/.gitignore
+++ b/triangle-peg-game-react/.gitignore
@@ -11,6 +11,17 @@ node_modules
 dist
 dist-ssr
 *.local
+tpg-spa/node_modules
+tpg-spa/dist
+tpg-spa/.vite
+tpg-spa/coverage
+
+# Python/precompute
+__pycache__/
+*.py[cod]
+precompute/__pycache__/
+precompute/.venv/
+precompute/*.json
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +33,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Build
+**/build
