--- a/triangle-peg-game-react/tpg-spa/package.json
+++ b/triangle-peg-game-react/tpg-spa/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "test": "node src/__tests__/states.test.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
