triangle-peg-game-react: first move (remove a peg) implemented; Position component selects Hole or Peg; states.json lazy loaded; error, loading messages, and game status displayed; documentation updated

--- a/triangle-peg-game-react/CMakeLists.txt
+++ b/triangle-peg-game-react/CMakeLists.txt
@@ -12,7 +12,7 @@ cmake_minimum_required(VERSION 3.20)
 project(triangle-peg-game-react NONE)
 
 set(PRECOMPUTE_SCRIPT "${CMAKE_SOURCE_DIR}/precompute/precompute.py")
-set(PRECOMPUTE_OUT "${CMAKE_SOURCE_DIR}/tpg-spa/src/assets/states.json")
+set(PRECOMPUTE_OUT "${CMAKE_SOURCE_DIR}/tpg-spa/public/states.json")
 
 add_custom_target(precompute ALL
     COMMAND ${CMAKE_COMMAND} -E echo "Generating precomputed states..."
