pwa-llm-poc: PWA and Ollama POC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ add_subdirectory(txrxcli)
 # heapmonj docs (Gradle-based app; docs via CMake)
 add_subdirectory(heapmonj)
 add_subdirectory(triangle-peg-game-react)
+add_subdirectory(pwa-llm-poc)
 
 find_program(CV_MAVEN_EXECUTABLE mvn)
 if(NOT CV_MAVEN_EXECUTABLE)
@@ -128,6 +129,9 @@ endif()
 if(TARGET build)
     add_dependencies(cv_samples_all build)
 endif()
+if(TARGET pwa-llm-poc-build)
+    add_dependencies(cv_samples_all pwa-llm-poc-build)
+endif()
 if(TARGET libdmotservices_mvn_install)
     add_dependencies(cv_samples_all libdmotservices_mvn_install)
 endif()
@@ -150,6 +154,9 @@ if(TARGET txrxcli_tests)
 endif()
 if(TARGET heapmonj_test)
     add_dependencies(cv_samples_tests heapmonj_test)
+endif()
+if(TARGET pwa-llm-poc-tests)
+    add_dependencies(cv_samples_tests pwa-llm-poc-tests)
 endif()
 add_custom_target(triangle-peg-game-react_tests
     WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/triangle-peg-game-react/tpg-spa"
@@ -189,8 +196,22 @@ endif()
 if(TARGET heapmonj_example_demo)
     add_dependencies(cv_samples_example_demo heapmonj_example_demo)
 endif()
+if(TARGET pwa-llm-poc-example-demo)
+    add_dependencies(cv_samples_example_demo pwa-llm-poc-example-demo)
+endif()
 if(TARGET example-demo)
     add_dependencies(cv_samples_example_demo example-demo)
+endif()
+
+add_custom_target(cv_samples_docs)
+if(TARGET heapmonj_docs_openapi)
+    add_dependencies(cv_samples_docs heapmonj_docs_openapi)
+endif()
+if(TARGET wifiequ_docs)
+    add_dependencies(cv_samples_docs wifiequ_docs)
+endif()
+if(TARGET pwa-llm-poc-docs)
+    add_dependencies(cv_samples_docs pwa-llm-poc-docs)
 endif()
 
 add_custom_target(cv_samples_dist
