--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,12 +35,33 @@ services:
     ports:
       - "8084:8080"
     restart: unless-stopped
+  pwa-llm-poc-backend:
+    build:
+      context: ./pwa-llm-poc
+      dockerfile: backend/Dockerfile
+    environment:
+      OLLAMA_URL: "http://host.docker.internal:11434"
+      PWA_LLM_BIND_ADDRESS: "0.0.0.0"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    ports:
+      - "8085:5000"
+    restart: unless-stopped
+  pwa-llm-poc-frontend:
+    build:
+      context: ./pwa-llm-poc/frontend/llm-spa
+      dockerfile: Dockerfile
+    ports:
+      - "8086:80"
+    depends_on:
+      - pwa-llm-poc-backend
+    restart: unless-stopped
   slideshow-server:
     build:
       context: .
       dockerfile: slideshow-server/Dockerfile
     ports:
-      - "8085:8080"
+      - "8087:8080"
     volumes:
       - ./slideshow-server/publicdomainpictures.net:/media:ro
     restart: unless-stopped
@@ -55,6 +76,8 @@ services:
       - heapmonj-frontend
       - null-cipher
       - pkixwebadm
+      - pwa-llm-poc-backend
+      - pwa-llm-poc-frontend
       - slideshow-server
       - triangle-peg-game-react
       - wifiequ-backend
@@ -65,7 +88,7 @@ services:
       context: ./triangle-peg-game-react
       dockerfile: Dockerfile
     ports:
-      - "8086:80"
+      - "8088:80"
     restart: unless-stopped
   wifiequ-backend:
     build:
@@ -76,7 +99,7 @@ services:
       WFQ_IFACE: "wlan0"
       WFQ_ACCESS_TOKEN: "wfq-demo-token-please-change"
     ports:
-      - "8087:8080"
+      - "8089:8080"
     restart: unless-stopped
   wifiequ-frontend:
     build:
@@ -87,7 +110,7 @@ services:
       WFQ_FRONTEND_PORT: "80"
       WFQ_STATS_KEY: "wfq-demo-token-please-change"
     ports:
-      - "8088:80"
+      - "8090:80"
     depends_on:
       - wifiequ-backend
     restart: unless-stopped
